<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/id_fragment_home"
    tools:context=".view.fragments.HomeFragment">

    <TextView
        android:id="@+id/id_title_upcoming_events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_activities_txt"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="@color/black" />

    <LinearLayout
        android:id="@+id/id_upcoming_events_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/id_title_upcoming_events"
        android:orientation="vertical">

    </LinearLayout>
</RelativeLayout>